[package]
name = "memepool-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.30.1", features = ["async"] }
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
serde_json = "1.0.139"
anyhow = "1.0.93"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19.0"
bytemuck = { version = "1.14", features = ["derive"] }
